tests/reference/asr-test_list_concat-672d5b5.stderr
semantic error: Type mismatch in shorthand operator, the types must be compatible
 --> tests/errors/test_list_concat.py:8:3
  |
8 |   a += b
  |   ^    ^ type mismatch ('list[i32]' and 'list[f64]')
